--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,7 @@ jobs:
             yum install -y epel-release && \
             yum install -y redis && \
             ps -ef | grep redis && \
-            /usr/bin/redis-server /etc/redis.conf --supervised systemd& && \
+            /usr/bin/redis-server /etc/redis.conf --supervised systemd& \
             ps -ef | grep redis && \
             systemctl start redis && \
             systemctl enable redis && \
