--- a/.travis.yml
+++ b/.travis.yml
@@ -43,18 +43,14 @@ jobs:
       install: []
       script: make travis-upload-docs
 
-    - python: "3.9"
-      arch: ppc64le
-      dist: bionic
-
 before_install:
   - sudo apt-get install zip
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - psql -c 'create database test_travis_ci_test;' -U postgres
 
-#install:
-  #- pip install codecov tox
+install:
+  - pip install codecov tox
   #- make install-zeus-cli
 
 script:
